wui/static/css/main.css
/** Page, body, general **/

html {
    font-family: 'Roboto', sans-serif;
    font-size: 62.5%;
    height: 100%;
    color: #333;
}

body {
    background: url('../img/bg_v3.svg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 100%;
    min-width: 320px;
}


/** Navbar **/

nav {
    background-color: #4DAB54;
}

.logo-img {
    max-height: 58px;
    height: 30px;
    vertical-align: middle;
}

.logo-text {
    font-size: 2.2rem;
    font-family: 'Sniglet', cursive;
    vertical-align: middle;
    margin-left: 3px;
}

nav.nav-center ul {
    text-align: center;
}

nav.nav-center ul li {
    display: inline-block;
    float: none;
}

nav.nav-center ul li a.nav-link {
    font-weight: 500;
    font-size: 2.7rem;
    color: #fff;
    padding: 0 32px;
}

@media only screen and (min-width: 601px) {
    nav, nav .nav-wrapper i, nav a.sidenav-trigger, nav a.sidenav-trigger i {
        height: 58px;
        line-height: 58px;
    }
}

#profile-wrapper {
    position: absolute;
    right: 0;
    top: 2px;
    font-size: 1.7rem;
}

#profile-logo {
    font-size: 37px;
    margin-right: 10px;
}

.dropdown-content li > a {
    color: #000;
    font-size: 1.5rem;
}


/** Sidenav **/

.sidenav-trigger {
    position: absolute;
    top: 15px;
    left: 15px;
    color: #fff;
}

@media only screen and (min-width: 993px) {
    .sidenav-trigger {
        display: none;
    }
}

.sidenav > li > a, .sidenav .subheader {
    color: #4c4c4c;
    height: 58px;
    line-height: 58px;
}

.sidenav > li > a {
    font-size: 1.4rem;
}

.sidenav .subheader {
    font-size: 2rem;
    text-align: center;
}

.sidenav .divider {
    margin: 0 0 8px 0;
    height: 2px;
}

.sidenav > li > a > i.material-icons {
    margin-right: 15px;
    margin-top: 5px;
}


/** Container **/

div.container {
    width: 95%;
    position: relative;
}

@media only screen and (min-width: 993px) {
    div.container {
        width: 75%;
    }
}

@media only screen and (min-width: 1200px) {
    div.container {
        width: 60%;
    }
}

#content-container {
    font-size: 1.6rem;
}

div.sidenav-container {
    padding-left: 300px;
    max-width: unset;
    width: 80%;
}


/** Breadcrumbs **/

nav.crumb-wrap {
    background: none;
    box-shadow: none;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin: 1rem;
    height: unset;
    min-height: 5rem;
}

nav.crumb-wrap .breadcrumb {
    color: #777;
    font-size: 1.4rem;
    line-height: 3rem;
}
nav.crumb-wrap .breadcrumb:last-child {
    color: #222;
}

nav.crumb-wrap .breadcrumb:after {
    content: '\E5CC';
    color: #aaa;
    vertical-align: top;
    display: inline-block;
    font-family: 'Material Icons';
    font-size: 2.2rem;
    margin: 0 1rem 0 1rem;
    -webkit-font-smoothing: antialiased;
}
nav.crumb-wrap .breadcrumb:last-child:after {
    display: none;
}

nav.crumb-wrap .breadcrumb:before {
    display: none;
}






/** Exercise page **/

#exercise-card #tabs-wrap {
    text-align: center;
}

#exercise-card .tabs .tab {
    text-transform: none;
}

#exercise-card .tabs .tab a {
    font-size: 2.1rem;
    color: gray;
}

#exercise-card .tabs .tab a:hover,
#exercise-card .tabs .tab a.active {
    background-color: transparent;
    color: #4DAB54;
}

#exercise-card .tabs .tab a:focus,
#exercise-card .tabs .tab a:focus.active {
    background-color: rgba(77, 171, 84, 0.2);
    outline: none;
}

#exercise-card .tabs .indicator {
    background-color: #4DAB54;
}

#exercise-card .card-content {
    border-top: 1px solid #e2e2e2;
}

#exercise-card .subheading {
    color: #4DAB54;
    font-weight: 500;
}

#exercise-card h2 {
    font-size: 2.3rem;
}

#exercise-card pre.feedback {
    white-space: pre-wrap;
    font-size: 1.5rem;
}

#exercise-card pre.auto-feedback {
    background-color: #f5f5f5;
}

#exercise-card .grade-number {
    font-weight: 500;
}

#exercise-card label[for=feedback],
#exercise-card label[for=grade] {
    font-size: 1.6rem;
}

#exercise-card #feedback:focus {
    border-bottom: 1px solid #469c45;
    -webkit-box-shadow: 0 1px 0 0 #469c45;
    box-shadow: 0 1px 0 0 #469c45;
}

#exercise-card #feedback:focus + label {
    color: #469c45;
}

#exercise-card #submission-info,
#exercise-card .assessment {
    margin-bottom: 3rem;
}

#exercise-card #grade:focus {
    border-bottom: 1px solid #469c45;
    -webkit-box-shadow: 0 1px 0 0 #469c45;
    box-shadow: 0 1px 0 0 #469c45;
}

#exercise-card #grade:focus + label {
    color: #469c45;
}

#exercise-card .collection-item .row {
    margin-bottom: 0;
}

#exercise-card .collection-item.inactive {
    color: #aaa;
}

#exercise-card .collection-item.inactive:hover {
    background-color: unset;
}

#exercise-card .eval-logo-auto {
    vertical-align: sub;
    width: 24px;
    margin-left: 10px;
}

#exercise-card .time {
    font-size: 1.9rem;
}

#exercise-card .grade {
    text-align: right;
    font-size: 1.9rem;
}

#exercise-card .eval-logo-teacher {
    color: #aaa;
    margin-left: 10px;
}

#exercise-card .eval-logo-missing {
    vertical-align: middle;
    width: 24px;
    margin-left: 10px;
}

#exercise-card .divided-collection .collection-item {
    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1),
    0 2px 1px -2px rgba(0, 0, 0, 0.09),
    0 1px 3px 0 rgba(0, 0, 0, 0.1);
}

#exercise-card .submission-title {
    display: inline-block;
    margin: 2.5rem 0 1.5rem 0;
}

#exercise-card span.last-submission-label {
    margin-left: 1rem;
}

#exercise-card h3 {
    font-size: 2.3rem;
}

#exercise-card h4 {
    font-size: 2rem;
}

#exercise-card .all-submissions-wrap {
    max-height: 35vh;
    overflow: auto;
}

#exercise-card .eval-logo-auto.sm {
    width: 22px;
}

#exercise-card .eval-logo-missing.sm {
    width: 22px;
}


/** Courses page **/

#courses-list div.teacher-course-wrapper {
    position: relative;
}
/* ... */

